[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/norse/Norse-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/PauseScreen.gd" type="Script" id=2]
[ext_resource path="res://ui/CreditsScreen.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "pause"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="PauseScreen" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsScreen" parent="." instance=ExtResource( 3 )]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.5
margin_top = -28.5
margin_right = 56.5
margin_bottom = 28.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 106.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 99.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "Paused"

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 99.0
margin_bottom = 67.0
shortcut = SubResource( 3 )
text = "Resume"

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 99.0
margin_bottom = 91.0
text = "Restart"

[node name="ViewCredits" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 99.0
margin_bottom = 115.0
text = "View Credits"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ViewCredits" to="." method="_on_ViewCredits_pressed"]
